# Triangle-Software-Rasterizer

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  baseBresenham.cpp  baseBresenham.h  bitmap.cpp  bitmap.h  bmpImage.cpp  bmpImage.h  bresenham.cpp  bresenham.h  geometry.h  integerBresenham.cpp  integerBresenham.h  lineDrawerFactory.cpp  lineDrawerFactory.h  main.cpp  modelLoader.cpp  modelLoader.h  renderer.cpp  renderer.h  set_env.sh  simpleBresenham.cpp  simpleBresenham.h  sliceBresenham.cpp  sliceBresenham.h  utils.h  window.cpp
src/: baseBresenham.cpp  bitmap.cpp  bitmap.h  geometry.h  integerBresenham.h  lineDrawerFactory.cpp  lineDrawerFactory.h  main.cpp  modelLoader.cpp  modelLoader.h  renderer.cpp  renderer.h  simpleBresenham.h  sliceBresenham.cpp  sliceBresenham.h  window.cpp  window.h
